fixed typo error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SultanBadri.github.io/memory-card",
+  "homepage": "https://SultanBadri.github.io/memory-cards",
   "name": "memory-card",
   "version": "0.1.0",
   "private": true,
